# CustomGUI_Qt_For_Python

./: .gitignore  README.md  TODO.md  TODO2.md  main.py  pyproject.toml  qt_core.py  ruff.toml
.github/workflows/: ci.yml  docs.yml  release-build.yml
AppCore/: __init__.py
AppCore/APP/: __init__.py  main_window_use_cases.py
AppCore/SYS/: __init__.py
AppCore/SYS/handler/: __init__.py  json_handler.py  yaml_handler.py
AppCore/SYS/logger/: __init__.py  glb_logger.py
AppCore/Tool/: Interface.py  Net.py  __init__.py  verify.py
AppCore/USER/: __init__.py
GUI/: __init__.py
GUI/columns/: __init__.py  left_column.ui  left_column_ui.py  right_column_ui.py
GUI/pages/: __init__.py  main_pages.py  main_pages.ui
GUI/windows/: __init__.py
GuiCore/: __init__.py  styles.py
GuiCore/AppDefineUI/: __init__.py
GuiCore/CustomUI/: __init__.py
GuiCore/WindowDefineUI/: __init__.py
docs/: API.md  ARCHITECTURE.md  LEGACY_COMPATIBILITY.md  README.md
github/.workflows/: ci.yml  docs.yml  release-build.yml
scripts/: archive_dist.py  build_package.py  generate_docs.py
tests/: conftest.py  test_app_context.py  test_architecture_boundaries.py  test_config_validation.py  test_design_tokens.py  test_error_boundaries.py  test_legacy_config_module.py  test_legacy_import_policy.py  test_main_window_controller.py  test_main_window_integration.py  test_main_window_use_cases.py  test_naming_consistency.py  test_no_cwd_runtime_dependency.py  test_page_registry.py  test_plugin_protocol.py  test_resource_locator.py  test_smoke.py  test_telemetry_module.py
(+80 files in other folders)
